creditas-sf/force-app/main/default/objects/CompanyDataSection__c/CompanyDataSection__c.object-meta.xml
<CustomObject>
    <label>Seção de Dados da Empresa</label>
    <nameField>
        <label>Nome da Empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seção de Dados da Empresa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>