creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/AnotherConsignedPendingReason__c.field-meta.xml
<CustomField>
    <fullName>AnotherConsignedPendingReason__c</fullName>
    <label>Motivo Pendência Possui outro Consignado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>