creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/AnotherConsignedPendingSubReason__c.field-meta.xml
<CustomField>
    <fullName>AnotherConsignedPendingSubReason__c</fullName>
    <label>SM Pendência Possui Outro Consignado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>