creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/AnotherConsigneeDescription__c.field-meta.xml
<CustomField>
    <fullName>AnotherConsigneeDescription__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Descrição para Possui Outro Consignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>