creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/AnotherConsigneeStatus__c.field-meta.xml
<CustomField>
    <fullName>AnotherConsigneeStatus__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Status de Possui Outro Consignado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovar</fullName>
            </value>
            <value>
                <fullName>Rejeitar</fullName>
            </value>
            <value>
                <fullName>Pendenciar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>