creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/CNPJDescription__c.field-meta.xml
<CustomField>
    <fullName>CNPJDescription__c</fullName>
    <label>Descrição do CNPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>