creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/CNPJPendingSubReason__c.field-meta.xml
<CustomField>
    <fullName>CNPJPendingSubReason__c</fullName>
    <label>Sub Motivo Pendência CNPJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>