creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/CompanyNameDescription__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameDescription__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Descrição para Nome da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>