creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/CompanyNamePendingSubReason__c.field-meta.xml
<CustomField>
    <fullName>CompanyNamePendingSubReason__c</fullName>
    <label>Sub Motivo Pendência Nome da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>