creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/CompanySectionExternalId__c.field-meta.xml
<CustomField>
    <fullName>CompanySectionExternalId__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>