creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/ConsignmentProgressDescription__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentProgressDescription__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Descrição para Andamento do Consignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>