creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/ConsignmentProgressStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentProgressStatus__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Status do Andamento do Consignado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovar</fullName>
            </value>
            <value>
                <fullName>Rejeitar</fullName>
            </value>
            <value>
                <fullName>Pendenciar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>