creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/MarginDescription__c.field-meta.xml
<CustomField>
    <fullName>MarginDescription__c</fullName>
    <description>Campo utilizado apenas pelo Squad de AtWork.</description>
    <label>Descrição de Margem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>