creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/MarginPendingReason__c.field-meta.xml
<CustomField>
    <fullName>MarginPendingReason__c</fullName>
    <label>Motivo Pendência Margem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>