creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Seção de Dados da Empresa</relationshipLabel>
    <relationshipName>CompanyDataSection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>