creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/StatusPendingReason__c.field-meta.xml
<CustomField>
    <fullName>StatusPendingReason__c</fullName>
    <label>Motivo Pendência Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>