creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/StatusPendingSubReason__c.field-meta.xml
<CustomField>
    <fullName>StatusPendingSubReason__c</fullName>
    <label>Sub Motivo Pendência Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>