creditas-sf/force-app/main/default/objects/CompanyDataSection__c/fields/StatusRejectReason__c.field-meta.xml
<CustomField>
    <fullName>StatusRejectReason__c</fullName>
    <label>Motivo Rejeição Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>